# C

ex3a-shirlevy/: CMakeLists.txt  README.md  linked_list.h  markov_chain.c  markov_chain.h  tweets_generator.c
ex3b-shirlevy/: CMakeLists.txt  README.md  ex3a-shirlevy.tar  ex3b-shirlevy.tar  makefile  markov_chain.c  markov_chain.h  snakes_and_ladders.c  tweets_generator.c
ex4-shirlevy/: Activation.cpp  Activation.h  CMakeLists.txt  Dense.cpp  Dense.h  Matrix.cpp  Matrix.h  MlpNetwork.cpp  MlpNetwork.h  README.md  mlpnetwork  test_matrix.cpp
ex5-shirlevy/: CMakeLists.txt  Makefile  Movie.cpp  Movie.h  README.md  RSUser.cpp  RSUser.h  RSUsersLoader.cpp  RSUsersLoader.h  RecommenderSystem.cpp  RecommenderSystem.h  RecommenderSystemLoader.cpp  RecommenderSystemLoader.h  main.cpp  tests.cpp
ex6-shirlevy/: CMakeLists.txt  Dictionary.hpp  HashMap.hpp  README.md  test_ex6.cpp  tests_ex6_suchetzky.cpp
